; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_extension.c_read_extension_aux_control_file.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_extension.c_read_extension_aux_control_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*)* @read_extension_aux_control_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_extension_aux_control_file(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i64 @palloc(i32 4)
  %7 = inttoptr i64 %6 to i32*
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @memcpy(i32* %8, i32* %9, i32 4)
  %11 = load i32*, i32** %5, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @parse_extension_control_file(i32* %11, i8* %12)
  %14 = load i32*, i32** %5, align 8
  ret i32* %14
}

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @parse_extension_control_file(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
